[gd_scene load_steps=18 format=3 uid="uid://1wudjg2ogp8c"]

[ext_resource type="Texture2D" uid="uid://c11vcsevg8m17" path="res://components/player/sprite-sheet.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://gfqy1u7rvdfs" path="res://components/player/player.gd" id="1_rkbax"]
[ext_resource type="Resource" uid="uid://c733h7i0ma1x1" path="res://components/player/input/move.tres" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_g6k8r"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_boad6"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_rgyib"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_boad6"]

[sub_resource type="Animation" id="Animation_g1dw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1dw6"]
_data = {
&"RESET": SubResource("Animation_g1dw6")
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "IdleDown"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "IdleSide"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "IdleUp"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "WalkDown"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "WalkSide"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "WalkUp"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"IdleDown": SubResource("Animation_qjkh3"),
&"IdleSide": SubResource("Animation_g6k8r"),
&"IdleUp": SubResource("Animation_yw30f"),
&"WalkDown": SubResource("Animation_hg6s5"),
&"WalkSide": SubResource("Animation_8t03j"),
&"WalkUp": SubResource("Animation_rgyib")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1dw6"]
radius = 16.0
height = 48.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_rkbax")
_move_action = ExtResource("2_g1dw6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_g1dw6"),
&"Movement": SubResource("AnimationLibrary_rgyib")
}
autoplay = "RESET"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_g1dw6")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_oul6g")
hframes = 21

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_g6k8r")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_boad6")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("6_rgyib")

[node name="ToWalking" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("7_boad6")
to = NodePath("../../Walking")
event = &"moving"
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="StateChart/Root"]
script = ExtResource("6_rgyib")

[node name="ToIdle" type="Node" parent="StateChart/Root/Walking"]
script = ExtResource("7_boad6")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Walking" to="." method="_on_walking_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Walking" to="." method="_on_walking_state_processing"]
